--- a/languages/default.json
+++ b/languages/default.json
@@ -1,14 +1,22 @@
 {
-    "_internal.plugin.validator.invalid_number": "参数数值无效: {{param_name}}, 必须在{{min}}-{{max}}之间",
-    "_internal.plugin.validator.invalid_length": "参数长度无效: {{param_name}}，必须在{{min_length}}-{{max_length}}之间",
-    "_internal.plugin.validator.invalid_match": "参数格式错误: {{param_name}}",
+    "_dict.login": "登录",
+    "_dict.register": "注册",
+    "_dict.reset": "重置",
+    "_dict.account": "账号",
+    "_dict.password": "密码",
+    "_dict.email": "邮箱",
+    "_internal.plugin.validator.invalid_number": "\"{{param_name}}\" 数值无效, 必须在{{min}}-{{max}}之间",
+    "_internal.plugin.validator.invalid_length": "\"{{param_name}}\" 的长度必须在{{min_length}}-{{max_length}}之间",
+    "_internal.plugin.validator.invalid_match": "\"{{param_name}}\" 格式错误",
     "_internal.plugin.validator.invalid": "参数无效: {{param_name}}",
-    "_internal.plugin.validator.type_error": "参数不能为空或者类型错误: {{param_name}}",
+    "_internal.plugin.validator.type_error": "\"{{param_name}}\" 不能为空或者类型错误",
     "email.config.invalid": "邮箱配置无效",
     "email.config.smtp_host_unset": "请配置邮件服务器",
     "email.send.is_cancelled": "邮件发送已被取消",
     "passport.validator.invalid_email": "邮箱格式错误",
     "passport.validator.invalid_passport": "密码长度必须在{{password_min_length}}-{{password_max_length}}位之间",
+    "passport.validator.invalid_account": "账号格式错误，只能包含字母、数字、下划线",
+    "passport.validator.invalid_account_length": "账号长度必须在{{account_min_length}}-{{account_max_length}}位之间",
     "passport.validator.invalid_captcha_code": "验证码错误",
     "passport.validator.invalid_nickname_length": "昵称长度必须在{{nickname_min_length}}-{{nickname_max_length}}位之间",
     "passport.captcha.code_time_out": "验证码已过期",
@@ -24,6 +32,7 @@
     "passport.register.confirm_email_success": "邮箱验证成功",
     "passport.register.confirm_email_params_invalid": "邮箱验证参数无效！",
     "passport.register.success_message": "您已经成功注册账号！",
+    "passport.register.account_exists": "账号已被注册",
     "passport.register.email_exists": "邮箱已被注册",
     "passport.reset.password.email_send_error": "重置密码邮件发送失败: {{error_message}}",
     "passport.reset.password.email_sended": "重置密码验证邮件已发送，请在邮箱中点击验证链接完成密码重置",
