--- a/languages/default.json
+++ b/languages/default.json
@@ -6,12 +6,13 @@
     "_dict_.login": "登录",
     "_dict_.logout": "登录",
     "_dict_.register": "注册",
-    "_dict_.unregister": "未注册",
+    "_dict_.no_login": "未登录",
     "_dict_.reset": "重置",
     "_dict_.account": "账号",
     "_dict_.password": "密码",
     "_dict_.email": "邮箱",
     "_dict_.set": "设置",
+    "_dict_.edit": "编辑",
     "_dict_.update": "更新",
     "_dict_.modify": "修改",
     "_dict_.captcha_code": "验证码",
@@ -33,10 +34,24 @@
     "_dict_.cations": "操作",
     "_dict_.delete": "删除",
     "_dict_.no_data": "暂无数据",
+    "_dict_.video_link": "视频链接",
+    "_dict_.insert": "插入",
+    "_dict_.add": "添加",
+    "_dict_.post": "发布",
+    "_model_.category_group": "分区组",
+    "_model_.category_group.name": "组名",
+    "_model_.category_group.priority": "组优先级",
     "_model_.category": "分区",
     "_model_.category.name": "名字",
     "_model_.category.description": "描述",
     "_model_.category.priority": "优先级",
+    "_model_.category.icon": "图标",
+    "_model_.post": "帖子",
+    "_model_.post.title": "标题",
+    "_model_.post.content": "内容",
+    "_model_.post.tag": "标签",
+    "_model_.post.draft": "草稿",
+    "_internal_.error": "服务器内部错误 : {{error_message}}",
     "_internal_.plugin.validator.invalid_number": "\"{{param_name}}\" 数值无效, 必须在{{min}}-{{max}}之间",
     "_internal_.plugin.validator.invalid_length": "\"{{param_name}}\" 的长度必须在{{min_length}}-{{max_length}}之间",
     "_internal_.plugin.validator.invalid_match": "\"{{param_name}}\" 格式错误",
@@ -75,6 +90,28 @@
     "passport.reset.reset_failed": "重置密码失败",
     "passport.reset.reset_success": "重置密码成功，即将跳转登录页面...",
     "admin.sidebar.category": "论坛分区",
-    "admin.sidebar.category.create_new": "新建分区",
-    "admin.sidebar.general_setting": "通用设置"
+    "admin.sidebar.general_setting": "通用设置",
+    "admin.form.category_group.create_new": "新建分区组",
+    "admin.form.category_group.update": "更新分区组",
+    "admin.form.category.create_new": "新建分区",
+    "admin.form.category.update": "更新分区",
+    "admin.error.category_group.name_not_exist": "分区组名不存在",
+    "admin.error.category.invalid_icon_link": "无效的图标链接，必须以 http 开头",
+    "post.upload.too_frequent": "上传频率过快，请稍后再试",
+    "post.upload.user_file_count_limit_note": "用户文件数量已达上限 {{max}}，无法上传文件，请删除一些文件后再试",
+    "post.upload.user_memory_limit_note": "用户存储空间已满 {{max}}，无法上传文件，请删除一些文件后再试",
+    "post.upload.file_too_large": "上传的文件过大，最大支持{{max_size}}",
+    "post.upload.file_empty": "上传的文件为空",
+    "post.upload.file_not_support": "不支持的文件格式",
+    "post.upload.file_error": "上传文件失败：{{error_message}}",
+    "post.form.bad_params": "参数错误",
+    "post.form.tag_note.use_space_or_comma_to_split": "使用空格或者逗号分隔标签",
+    "post.form.invalid_supports_video_domain": "支持的视频平台未设置",
+    "post.form.invalid_video_src": "视频地址无效",
+    "post.form.unsupported_video_domain": "不支持的视频地址",
+    "post.form.tags_length_limit": "标签不能超过{{max}}个",
+    "post.form.tags_has_sensitive_words": "标签包含敏感词：{{words}}",
+    "post.form.title_has_sensitive_words": "标题包含敏感词：{{words}}",
+    "post.form.content_has_sensitive_words": "内容包含敏感词：{{words}}",
+    "post.error.category_not_exist": "论坛分区不存在"
 }
