--- a/languages/default.json
+++ b/languages/default.json
@@ -4,7 +4,7 @@
     "_http_.code_404": "页面不存在",
     "_http_.code_500": "服务器错误",
     "_dict_.login": "登录",
-    "_dict_.logout": "登录",
+    "_dict_.logout": "退出",
     "_dict_.register": "注册",
     "_dict_.no_login": "未登录",
     "_dict_.reset": "重置",
@@ -105,7 +105,6 @@
     "post.upload.file_empty": "上传的文件为空",
     "post.upload.file_not_support": "不支持的文件格式",
     "post.upload.file_error": "上传文件失败：{{error_message}}",
-    "post.form.bad_params": "参数错误",
     "post.form.tag_note.use_space_or_comma_to_split": "使用空格或者逗号分隔标签",
     "post.form.invalid_supports_video_domain": "支持的视频平台未设置",
     "post.form.invalid_video_src": "视频地址无效",
@@ -114,5 +113,6 @@
     "post.form.tags_has_sensitive_words": "标签包含敏感词：{{words}}",
     "post.form.title_has_sensitive_words": "标题包含敏感词：{{words}}",
     "post.form.content_has_sensitive_words": "内容包含敏感词：{{words}}",
-    "post.error.category_not_exist": "论坛分区不存在"
+    "post.error.category_not_exist": "论坛分区不存在",
+    "post.error.post_not_exist": "帖子不存在"
 }
